# arc-rs-qinpel-srv

./: .gitignore  Cargo.toml  README.md  ROUDMAP.md  bases.json  master-token.txt  qinpel-wiz.liz  qinpel-wiz.lua  reset.bat  reset.sh  setup.json  test-srv.liz  test.liz  users.json
.github/workflows/: release.yml
run/: index.html
src/: auth.rs  base.rs  body.rs  call.rs  clip.rs  comm.rs  data.rs  dirs.rs  files.rs  guard.rs  lib.rs  lists.rs  login.rs  main.rs  maker.rs  persist.rs  pooling.rs  precept.rs  runner.rs  serve.rs  server.rs  servfs.rs  setup.rs  srvauth.rs  srvbase.rs  srvdirs.rs  srvruns.rs  srvutil.rs  texts.rs  trans.rs  utils.rs
