[package]
name = "qinpel-srv"
description = "Qinpel Server - Web server of graphical user and command line interfaces, file system and database source operations for the Qinpel (Quick Interface for Pointel) Platform."
repository = "https://github.com/emuvi/qinpel-srv/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
actix-web = { version = "3", features = ["rustls"] }
rustls = "0.18"
actix-files = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
rand = "0.8"
base64 = "0.13"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "all"] }
futures = "0.3.5"
