[package]
name = "qinpel-srv"
description = "QinpelSrv ( Qinpel Server ) is a command that servers the graphical user and command interfaces of the Pointel platform. Is the backend of the Qinpel, the Quick Interface for Power Intelligence. It also provides easy access for the file system and database source."
repository = "https://github.com/emuvi/qinpel-srv/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
actix-web = { version = "3", features = ["rustls"] }
rustls = "0.18"
actix-files = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
rand = "0.8"
base64 = "0.13"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "all"] }
futures = "0.3"
