[package]
name = "qinpel-srv"
description = "QinpelSrv (Qinpel Server) is a library and a command program that servers public files, graphical user interfaces, file system access with authorization, command programs dispatchs, databases queries and Liz functionality with scripts. It is the base of the Pointel platform and the backend of the Qinpel, the Quick Interface for Power Intelligence."
repository = "https://github.com/emuvi/qinpel-srv/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.2.1"
edition = "2018"

[dependencies]
clap = { version = "3", features = ["cargo"] }
actix-web = { version = "3", features = ["rustls"] }
actix-files = "0.5"
rustls = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
rand = "0.8"
base64 = "0.13"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "all"] }
futures = "0.3"
liz = { path = "../liz" }
